--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -180,17 +180,17 @@ h3 {
 /* Footer Styles */
 .footer-section {
   padding: 20px;
-  color: #000;
+  color: #fff;
 }
 
 .social-icons a {
-  color: #000;
+  color: #fff;
   font-size: 24px;
   margin-right: 10px;
 }
 
 .social-icons a:hover {
-  color: #000;
+  color: #ddd;
 }
 
 /* Additional styles for responsiveness */
@@ -366,4 +366,255 @@ h3 {
 .shipping-submit-btn:hover {
   background-color: #0056b3;
   border-color: #0056b3;
+}
+
+/* Loginscreen css */
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+
+.login-box {
+  background-image: linear-gradient(to bottom right, #ffffff, #f5f5f5);
+  /* Gradient colors */
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+}
+
+.login-heading {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.error-message {
+  color: red;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.loader {
+  text-align: center;
+  margin-bottom: 20px;
+  /* Style your loader here */
+}
+
+/* Register Screen CSS */
+
+.register-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+}
+
+.register-box {
+  background-image: linear-gradient(to bottom right, #ffffff, #f5f5f5);
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+}
+
+.register-heading {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.error-message,
+.success-message {
+  text-align: center;
+  margin-bottom: 20px;
+  /* Add styles for error and success messages */
+}
+
+.loader {
+  text-align: center;
+  margin-bottom: 20px;
+  /* Style your loader here */
+}
+
+/* cart */
+.shopping-cart {
+  margin-bottom: 20px;
+}
+
+.cart-title {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+.empty-cart-message {
+  font-size: 18px;
+}
+
+.cart-item {
+  margin-bottom: 15px;
+  border: 1px solid #eee;
+  border-radius: 8px;
+  padding: 15px;
+}
+
+.checkout-card {
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.subtotal {
+  font-size: 18px;
+}
+
+.checkout-button {
+  margin-top: 20px;
+}
+
+/* User table */
+.users-container {
+  margin: 20px;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+}
+
+.users-title {
+  font-size: 32px;
+  margin-bottom: 20px;
+  color: #007bff;
+}
+
+.custom-table {
+  font-size: 16px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.custom-table th {
+  background-color: #f8f9fa;
+  font-weight: bold;
+  text-align: center;
+}
+
+.custom-table th,
+.custom-table td {
+  padding: 10px;
+}
+
+.admin-badge,
+.user-badge {
+  display: inline-block;
+  padding: 6px 12px;
+  border-radius: 20px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.admin-badge {
+  background-color: #28a745;
+  color: #fff;
+}
+
+.user-badge {
+  background-color: #dc3545;
+  color: #fff;
+}
+
+.btn-edit,
+.btn-delete {
+  margin-right: 5px;
+  font-size: 14px;
+  padding: 6px 12px;
+}
+
+/* Product List CSS */
+.products-container {
+  margin: 20px;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+}
+
+.products-title {
+  font-size: 32px;
+  margin-bottom: 20px;
+  color: #007bff;
+}
+
+.create-button {
+  background-color: #28a745;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  padding: 8px 16px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.custom-table {
+  font-size: 16px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.custom-table th {
+  background-color: #f8f9fa;
+  font-weight: bold;
+  text-align: center;
+}
+
+.custom-table th,
+.custom-table td {
+  padding: 10px;
+}
+
+.btn-edit,
+.btn-delete {
+  margin-right: 5px;
+  font-size: 14px;
+  padding: 6px 12px;
+}
+
+/* Orders CSS */
+.orders-container {
+  margin: 20px;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+}
+
+.orders-title {
+  font-size: 32px;
+  margin-bottom: 20px;
+  color: #007bff;
+}
+
+.custom-table {
+  font-size: 16px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.custom-table th {
+  background-color: #f8f9fa;
+  font-weight: bold;
+  text-align: center;
+}
+
+.custom-table th,
+.custom-table td {
+  padding: 10px;
+}
+
+.btn-details {
+  margin-right: 5px;
+  font-size: 14px;
+  padding: 6px 12px;
 }
